--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <servlet>
-        <servlet-name>UserRegisterServlet</servlet-name>
-        <servlet-class>com.ywz.furns.web.UserRegisterServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>UserLoginServlet</servlet-name>
-        <servlet-class>com.ywz.furns.web.UserLoginServlet</servlet-class>
-    </servlet>
+<!--    <servlet>-->
+<!--        <servlet-name>UserRegisterServlet</servlet-name>-->
+<!--        <servlet-class>com.ywz.furns.web.UserRegisterServlet</servlet-class>-->
+<!--    </servlet>-->
+<!--    <servlet>-->
+<!--        <servlet-name>UserLoginServlet</servlet-name>-->
+<!--        <servlet-class>com.ywz.furns.web.UserLoginServlet</servlet-class>-->
+<!--    </servlet>-->
     <servlet>
         <servlet-name>UserServlet</servlet-name>
         <servlet-class>com.ywz.furns.web.UserServlet</servlet-class>
